<resources>
    <string name="app_name">写!神経衰弱</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_of_startPlayButton">遊ぶ</string>
    <string name="text_of_gotoSettingsButton">設定</string>
    <string name="description_of_MainTitleImage">MainTitleLogo</string>
    <string name="text_of_toggleNumOfCard20">20枚</string>
    <string name="text_of_toggleNumOfCard12">12枚</string>
    <string name="text_of_toggleNumOfCard30">30枚</string>
    <string name="text_of_labelImagePath">写真の場所</string>
    <string name="text_of_radioSDCard">SDカード全体</string>
    <string name="text_of_radioSpecifyDirectory">フォルダを指定する</string>
    <string name="text_of_textSpecifiedDirectoryPath">TextView</string>
    <string name="text_of_labelNumOfCard">カードの枚数</string>
    <string name="description_of_card_image">single card</string>
    <string name="text_of_loading">loading</string>
    <string name="text_of_retryButton">もう1回遊ぶ</string>
    <string name="text_of_backButton">戻る</string>
    <string name="description_of_detailImage">詳細画像</string>
    <string name="label_of_result_time">タイム</string>
    <string name="text_of_singlePlayButton">一人で遊ぶ</string>
    <string name="text_of_multiplePlayButton">二人で遊ぶ</string>
    <string name="text_of_vsComButton">COMと対戦</string>
    <string name="text_of_Winner">Winner</string>
    <string name="label_of" />
    <string name="label_of_score">スコア</string>
    <string name="text_of_computerPlayButton">コンピューターと対戦</string>
    <string name="text_of_level_0">弱い</string>
    <string name="text_of_computerLevelSelectionText">コンピューターの強さを選んでください</string>
    <string name="text_of_level_1">普通</string>
    <string name="text_of_level_2">強い</string>
    <string name="text_of_player1Name">P1</string>
    <string name="text_of_player2Name">P2</string>>
    <string name="text_of_youName">あなた</string>
    <string name="text_of_comName">COM</string>>
    <string name="text_privacy_policy_link"><a href="https://pic-card-meory-app-bucket.s3.ap-northeast-1.amazonaws.com/public/policy.html">プライバシーポリシー</a></string>
    <string name="text_of_licenses"><a href="">ライセンスの表示</a></string>
</resources>